// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runClientPrintConfig > --json output for claude/http parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbx": {
      "type": "http",
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for claude/stdio parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbx": {
      "type": "stdio",
      "command": "npx",
      "args": [
        "-y",
        "@toolbx/cli",
        "serve",
        "--stdio"
      ],
      "env": {}
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for codex/http parses cleanly and matches snapshot 1`] = `
"{
  "mcp_servers": {
    "toolbx": {
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for codex/stdio parses cleanly and matches snapshot 1`] = `
"{
  "mcp_servers": {
    "toolbx": {
      "command": "npx",
      "args": [
        "-y",
        "@toolbx/cli",
        "serve",
        "--stdio"
      ]
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for generic/http parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbx": {
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for generic/stdio parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbx": {
      "command": "npx",
      "args": [
        "-y",
        "@toolbx/cli",
        "serve",
        "--stdio"
      ]
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for opencode/http parses cleanly and matches snapshot 1`] = `
"{
  "mcp": {
    "toolbx": {
      "type": "remote",
      "url": "http://127.0.0.1:7331/mcp",
      "enabled": true
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for opencode/stdio parses cleanly and matches snapshot 1`] = `
"{
  "mcp": {
    "toolbx": {
      "type": "local",
      "command": [
        "npx",
        "-y",
        "@toolbx/cli",
        "serve",
        "--stdio"
      ],
      "enabled": true
    }
  }
}
"
`;

exports[`runClientPrintConfig > default friendly output for claude/http contains an explanation and a fenced code block 1`] = `
"Open Claude Code's user-scope MCP config — \`~/.claude.json\` on POSIX, \`%USERPROFILE%\\.claude.json\` on Windows.

Run \`tlbx serve --http\` first, then merge the JSON block below into the file's top-level \`mcpServers\` object so Claude Code points at the running Toolbx.

\`\`\`json
{
  "mcpServers": {
    "toolbx": {
      "type": "http",
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for claude/stdio contains an explanation and a fenced code block 1`] = `
"Open Claude Code's user-scope MCP config — \`~/.claude.json\` on POSIX, \`%USERPROFILE%\\.claude.json\` on Windows.

Merge the JSON block below into the file's top-level \`mcpServers\` object so Claude Code launches Toolbx over stdio on demand.

Tip: \`tlbx client install claude\` writes the same entry for you (with a timestamped backup).

\`\`\`json
{
  "mcpServers": {
    "toolbx": {
      "type": "stdio",
      "command": "npx",
      "args": [
        "-y",
        "@toolbx/cli",
        "serve",
        "--stdio"
      ],
      "env": {}
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for codex/http contains an explanation and a fenced code block 1`] = `
"Run \`tlbx serve --http\` first, then add this to your Codex CLI MCP config (~/.codex/config.toml) to point it at the running Toolbx:

\`\`\`toml
[mcp_servers.toolbx]
url = "http://127.0.0.1:7331/mcp"
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for codex/stdio contains an explanation and a fenced code block 1`] = `
"Add this to your Codex CLI MCP config (~/.codex/config.toml) so Codex launches Toolbx over stdio on demand:

\`\`\`toml
[mcp_servers.toolbx]
command = "npx"
args = ["-y", "@toolbx/cli", "serve", "--stdio"]
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for generic/http contains an explanation and a fenced code block 1`] = `
"Generic MCP client (Streamable HTTP). Run \`tlbx serve --http\` first, then point your client at this URL:

\`\`\`json
{
  "mcpServers": {
    "toolbx": {
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for generic/stdio contains an explanation and a fenced code block 1`] = `
"Generic MCP client (stdio). Most clients accept this shape; consult your client docs for the exact config key:

\`\`\`json
{
  "mcpServers": {
    "toolbx": {
      "command": "npx",
      "args": [
        "-y",
        "@toolbx/cli",
        "serve",
        "--stdio"
      ]
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for opencode/http contains an explanation and a fenced code block 1`] = `
"Run \`tlbx serve --http\` first, then add this to your OpenCode MCP config to point it at the running Toolbx:

\`\`\`json
{
  "mcp": {
    "toolbx": {
      "type": "remote",
      "url": "http://127.0.0.1:7331/mcp",
      "enabled": true
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for opencode/stdio contains an explanation and a fenced code block 1`] = `
"Add this to your OpenCode MCP config so OpenCode launches Toolbx over stdio:

\`\`\`json
{
  "mcp": {
    "toolbx": {
      "type": "local",
      "command": [
        "npx",
        "-y",
        "@toolbx/cli",
        "serve",
        "--stdio"
      ],
      "enabled": true
    }
  }
}
\`\`\`
"
`;
